--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -54,10 +54,11 @@
     </Compile>
     <Compile Include="ICreature.cs" />
     <Compile Include="IItem.cs" />
+    <Compile Include="IMovable.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="IShoping.cs" />
     <Compile Include="Item.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Hero.cs" />
     <Compile Include="Potion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,6 +74,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
