--- a/DarkDungeon.WF/Data/Data.csproj
+++ b/DarkDungeon.WF/Data/Data.csproj
@@ -43,6 +43,10 @@
     <Compile Include="Characters\Enemies\Enemy.cs" />
     <Compile Include="Characters\IFightable.cs" />
     <Compile Include="Characters\IImprovable.cs" />
+    <Compile Include="Characters\Movement\Direction.cs" />
+    <Compile Include="Characters\Movement\IMovable.cs" />
+    <Compile Include="Characters\Movement\MazeSolver.cs" />
+    <Compile Include="Characters\Movement\Movement.cs" />
     <Compile Include="Characters\PlayerCharacters\PlayerCharacter.cs" />
     <Compile Include="GridViewItem\GridViewItem.cs" />
     <Compile Include="Items\ItemsCollections\Inventars\Equipment.cs" />
