--- a/DarkDungeon.WF/GUI/GUI.csproj
+++ b/DarkDungeon.WF/GUI/GUI.csproj
@@ -46,6 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ButtonClickEvents.cs" />
+    <Compile Include="CharacterSelectMenuScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Executable.cs">
       <SubType>Form</SubType>
     </Compile>
