Add .cd to the solution

--- a/DarkDungeon.WF/GUI/GUI.csproj
+++ b/DarkDungeon.WF/GUI/GUI.csproj
@@ -79,6 +79,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="GUI.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
